# swissenergyforecast

./: .gitignore  .pre-commit-config.yaml  README.md  compose.override.yaml  compose.prod.yaml  compose.yaml  pyproject.toml
.github/scripts/: deploy.sh
.github/workflows/: build-check.yaml  cd.yaml  ci.yaml  deploy.yaml
backend/: .env.example  Dockerfile  compose.yaml  pyproject.toml  sanity_checks.ipynb
backend/app/: main.py
backend/app/clients/: db_client.py  entsoe_client.py
backend/app/core/: config.py  dependencies.py  model.py
backend/app/routers/: entsoe_loads.py  forecast.py  forecasts.py  loads.py
backend/app/schemas/: entsoe_loads.py  entsoe_loads_fetch_latest.py  forecast.py
backend/app/services/: data_cleaning_service.py  data_loading_service.py  feature_extraction_service.py  performance_measure_service.py
backend/img/: backend.drawio
backend/nb-dev/: 0-load.ipynb  1-measure.ipynb  2-modelling.ipynb  3-train.ipynb
backend/tests/: conftest.py
backend/tests/app/clients/: entsoe_client.py
backend/tests/app/core/: test_model.py
backend/tests/app/schemas/: forecast.py
backend/tests/app/services/: test_data_cleaning_service.py  test_data_loading_service.py  test_feature_extraction_service.py  test_performance_measure_service.py
backend/viz/: data_ingestion__sanity_check.ipynb  dummy_forecast_lineplot.html  interpolation_extrapolation.ipynb  mape_degradation_study.html  missing_load_lineplot.html  modelling__lineplot.ipynb
frontend/: Dockerfile  mkdocs.yml  nginx.conf  pyproject.toml
frontend/docs/: about_me.md  conclusion.md  (+8 more)
(+22 files in other folders)
